fix shwllocard long text overlape

--- a/src/styles/components/shallowCard/_shallowCardMobile.scss
+++ b/src/styles/components/shallowCard/_shallowCardMobile.scss
@@ -1,7 +1,8 @@
 .shallowCardM{
   width: 100%;
   margin: 2rem 0;
-  height: 10rem;
+  max-width: 100%;
+  min-height: 10rem;
   border-radius: .5rem;
   box-shadow: 0 .6rem 1rem rgba($color-black, .5);
   color: $color-white;
@@ -10,6 +11,12 @@
   align-items: center;
   justify-content: center;
   position: relative;
+  &__title{
+    font-weight: bold;
+    text-align: center;
+    font-size: 2rem;
+    width: 100%;
+  }
   &__more{
     fill: $color-white;
     height: 3rem;
@@ -42,7 +49,7 @@
     justify-content: center;
     &--title{
       text-transform: capitalize;
-      font-size: 4rem;
+      font-size: 2rem;
       margin-top: auto;
     }
     &--options{
@@ -58,6 +65,7 @@
       font-weight: 300;
       color: $color-grey;
       margin: .5rem 0;
+      font-size: 1.3rem;
     }
   } //shallowCard__info
 }
